feat(favicon): adicionar logo G estilizada tech/pac-man
- Favicon SVG principal com letra G estilizada
- Paleta azul (#1E40AF, #2563EB), amarelo (#FBBF24) e preto
- Design tech com grid pattern e efeitos glow
- Estilo pac-man na abertura da letra G
- Favicon simplificado para fallback
- Manifest.json para suporte PWA
- Múltiplos tamanhos e formatos para compatibilidade

--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
     />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/assets/social.svg" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/social.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon-simple.svg" sizes="16x16" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon.svg" />
+    <link rel="manifest" href="/manifest.json" />
 
     <!-- Font Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -352,7 +354,7 @@
             </a>
 
             <a
-              href="https://linkedin.com/in/greger"
+              href="https://www.linkedin.com/in/renato-greger-1b7197381/"
               target="_blank"
               rel="noopener noreferrer"
               class="flex items-center justify-between p-6 bg-gray-50 dark:bg-gray-800 rounded-xl hover:bg-gray-100 dark:hover:bg-gray-700 transition-all duration-300 group focus-ring"
